<package format="2">
  <name>dylan_msc</name>
  <version>1.2.4</version>
  <description>
  Package for work done for MSC lab.
  </description>
  <maintainer email="dylancallaway@berkeley.edu">Dylan Callaway</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>